# wilqpaint

./: .gitignore  Makefile  Makefile.am  PKGBUILD  README.md  aboutdialog.c  aboutdialog.h  aboutdialog.ui  colorchooser.c  colorchooser.h  configure.ac  drawimage.c  drawimage.h  griddialog.c  griddialog.h  griddialog.ui  hittest.c  hittest.h  imagefile.c  imagefile.h  menubar.ui  opendialog.c  opendialog.h  opendialog.ui  quitdialog.c  quitdialog.ui  savedialog.c  savedialog.h  savedialog.ui  shape.c  shape.h  shapedrawing.c  shapedrawing.h  sizedialog.h  sizedialog.ui  wilqpaint.c  wilqpaint.desktop  wilqpaint.gresource.xml  wilqpaint.ui  wilqpaintwin.c  (+3 more)
debian/: changelog  control  copyright
src/: Makefile.am  aboutdialog.c  aboutdialog.ui  colorchooser.c  colorchooser.h  drawimage.c  drawimage.h  griddialog.c  griddialog.h  griddialog.ui  hittest.c  hittest.h  imagefile.c  imagefile.h  imagetype.c  imagetype.h  imgtype.c  imgtype.h  menubar.ui  opendialog.c  quitdialog.c  quitdialog.h  quitdialog.ui  savedialog.c  savedialog.ui  shape.c  shape.h  shapedrawing.c  shapedrawing.h  sizedialog.c  sizedialog.ui  thresholddialog.c  thresholddialog.h  thresholddialog.ui  wilqpaint.c  wilqpaint.gresource.xml  wilqpaint.ui  wilqpaintapp.c  wilqpaintapp.h  wilqpaintwin.c  (+2 more)
src/images/: Makefile.am  wilqpaint.wlq
